src/test/deca/context/valid/test_method_01.deca
// Description:
//    Teste l'oubli de l'héritage entre 2 classes
//
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 20/01/2023
// Description:
//    Teste sur les classes
//
// Resultats:
//    TEST PASS
//
// Historique:
//    cree le 20/01/2023
class A {
    protected int x;
    protected float y;
    float z;
    int getX() {
        return x ;
    }
    void setXY(int x, float y) {
        this.x = x ;
        this.y = y ;
    }

    float getY(){
        return y;
    }
}

{
    A a = new A() ;
    int b = readInt();
    float f = readFloat();
    a.setXY(b, f);
    println(a.getX(), a.getY()) ;
}
